@@ -1,5 +1,6 @@
 1.2.0p5
 
+  fixed server resources_available n-1 issue
   added further Altix CPUSet support (NCSA)
   added local checkpoint script support for linux
   fixed 'premature end of message warning'
